--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
 <form th:action="@{/login}" method="post">
     <div>
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
+        <input type="email" id="username" name="username" required>
     </div>
     <div>
         <label for="password">Password:</label>
